cluster/apps/media/gaps/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app gaps
  namespace: media
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  selector:
    app.kubernetes.io/instance: *app
    app.kubernetes.io/name: *app
  ports:
    - name: http
      port: 8484
      protocol: TCP
      targetPort: http
